# django-livesettings3

./: .gitignore  .hgignore  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  setuptools_hg-0.2-py2.6.egg  travis_tests.sh
.github/workflows/: tests.yml
docs/: Makefile  about.rst  conf.py  index.rst  installation.rst  requirements.rst  usage.rst
junk/django-livesettings3-1.5.4/: PKG-INFO  setup.py
junk/django-livesettings3-1.5.4/livesettings/: __init__.py  forms.py  models.py  test_urls.py  utils.py  views.py  widgets.py
junk/django-livesettings3-1.5.4/livesettings/templates/livesettings/: group_settings.html  site_settings.html  text.txt
livesettings/: forms.py  functions.py  models.py  overrides.py  test_urls.py  tests.py  urls.py  utils.py  values.py  views.py  widgets.py
livesettings/migrations/: 0001_initial.py
livesettings/static/livesettings/js/: string_array_widget.js
livesettings/svelte/: package.json  rollup.config.mjs
livesettings/svelte/StringArrayWidget/: StringArrayItem.svelte  index.svelte
livesettings/svelte/components/: Dots.svelte
livesettings/svelte/icons/: Cross.svelte  DragHandleDots.svelte
livesettings/svelte/lib/: actions.js
livesettings/templates/livesettings/: _admin_site_views.html  group_settings.html  groups_navbar.html  site_settings.html
livesettings/templates/livesettings/form_widgets/: string_array_widget.html
livesettings/templatetags/: config_tags.py
livesettings/test_app/: __init__.py  manage.py  settings.py  urls.py
livesettings/test_app/localsite/: config.py
livesettings/tests/: settings.py
test-project/localsite/: config.py  models.py  views.py
test-project/localsite/templates/myapp/: index.html
test-project/test_project/: settings.py  urls.py  wsgi.py
test-project/test_project/media/: README.md
tests/: settings.py  urls.py
